feat: add google analytics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ nav:
       - Resonia.one →: https://resonia.one
 
 extra:
+  analytics:
+    provider: google
+    property: G-5F68C3D12Z  # Google Analytics 4 property ID
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/daofa-one
