feat: disable github link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Daofa.one
 site_description: "The Way Resonates — philosophy meets technology."
 site_url: https://daofa.one
-repo_url: https://github.com/daofa-one/daofa-one.github.io
+#repo_url: https://github.com/daofa-one/daofa-one.github.io
 copyright:
   '© 2025 Daofa.one'
 
