--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,9 +50,7 @@ nav:
       - Team: team.md
       - Contact: contact.md
   - Product:
-      - Knoman →: https://chromewebstore.google.com/detail/knoman/pkjiiacndminmhofjeggfkbheibkaeag
-      - Superowser →: https://github.com/daofa-one/superowser
-      - Resonia.one →: https://resonia.one
+      - Overview: products.md
 
 extra:
   social:
